/*
* This program and the accompanying materials are made available under the terms of the
* Eclipse Public License v2.0 which accompanies this distribution, and is available at
* https://www.eclipse.org/legal/epl-v20.html
*
* SPDX-License-Identifier: EPL-2.0
*
* Copyright Contributors to the Zowe Project.
*
*/

import * as fs from "fs";
import { ImperativeError, ImperativeExpect } from "../..";
import { Config } from "../src/Config";
import { IConfig } from "../src/doc/IConfig";
import { IConfigProfile } from "../src/doc/IConfigProfile";

const MY_APP = "my_app";

describe("Config tests", () => {
    afterEach(() => {
        jest.restoreAllMocks();
    });

    describe("load", () => {
        beforeEach(() => {
            jest.spyOn(Config.prototype as any, "secureLoad").mockResolvedValue(undefined);
        });

        it("should load project user config", async () => {
            jest.spyOn(Config, "search").mockReturnValue(__dirname + "/__resources__/project.config.user.json");
            jest.spyOn(fs, "existsSync")
                .mockReturnValueOnce(true)      // Project user layer
                .mockReturnValueOnce(false)     // Project layer
                .mockReturnValueOnce(false)     // User layer
                .mockReturnValueOnce(false);    // Global layer
            const config = await Config.load(MY_APP);
            expect(config.properties).toMatchSnapshot();
        });

        it("should load project config", async () => {
            jest.spyOn(Config, "search").mockReturnValue(__dirname + "/__resources__/project.config.json");
            jest.spyOn(fs, "existsSync")
                .mockReturnValueOnce(false)     // Project user layer
                .mockReturnValueOnce(true)      // Project layer
                .mockReturnValueOnce(false)     // User layer
                .mockReturnValueOnce(false);    // Global layer
            const config = await Config.load(MY_APP);
            expect(config.properties).toMatchSnapshot();
        });

        it("should load user config", async () => {
            jest.spyOn(Config, "search").mockReturnValue(null);
            jest.spyOn(Config.prototype as any, "_home", "get").mockReturnValue(__dirname + "/__resources__");
            jest.spyOn(fs, "existsSync")
                .mockReturnValueOnce(false)     // Project user layer
                .mockReturnValueOnce(false)     // Project layer
                .mockReturnValueOnce(true)      // User layer
                .mockReturnValueOnce(false);    // Global layer
            const config = await Config.load(MY_APP);
            expect(config.properties).toMatchSnapshot();
        });

        it("should load global config", async () => {
            jest.spyOn(Config, "search").mockReturnValue(null);
            jest.spyOn(Config.prototype as any, "_home", "get").mockReturnValue(__dirname + "/__resources__");
            jest.spyOn(fs, "existsSync")
                .mockReturnValueOnce(false)     // Project user layer
                .mockReturnValueOnce(false)     // Project layer
                .mockReturnValueOnce(false)     // User layer
                .mockReturnValueOnce(true);     // Global layer
            const config = await Config.load(MY_APP);
            expect(config.properties).toMatchSnapshot();
        });

        it("should merge multiple config files", async () => {
            jest.spyOn(Config, "search")
                .mockReturnValueOnce(__dirname + "/__resources__/project.config.user.json")
                .mockReturnValueOnce(__dirname + "/__resources__/project.config.json");
            jest.spyOn(Config.prototype as any, "_home", "get").mockReturnValue(__dirname + "/__resources__");
            jest.spyOn(fs, "existsSync").mockReturnValue(true);
            const config = await Config.load(MY_APP);
            expect(config.properties).toMatchSnapshot();
        });
    });

    it("should find config that exists if any layers exist", () => {
        const config = new (Config as any)();
        config._layers = [
            { exists: false },
            { exists: true },
            { exists: false }
        ];
        expect(config.exists).toBe(true);
    });

    it("should not find config that exists if no layers exist", () => {
        const config = new (Config as any)();
        config._layers = [ { exists: false } ];
        expect(config.exists).toBe(false);
    });

    it("should provide a deep copy of layers", () => {
        const config = new (Config as any)();
        config._layers = {};
        config.layers.properties = {};
        expect(Object.keys(config._layers).length).toBe(0);
    });

    describe("set", () => {
        beforeEach(() => {
            jest.spyOn(Config, "search").mockReturnValue(__dirname + "/__resources__/project.config.user.json");
            jest.spyOn(fs, "existsSync").mockReturnValueOnce(true).mockReturnValue(false);
            jest.spyOn(Config.prototype as any, "secureLoad").mockResolvedValue(undefined);
        });

        it("should set boolean value in config", async () => {
            const config = await Config.load(MY_APP);
            config.set("profiles.fruit.profiles.apple.properties.ripe", "true");
            expect(config.properties.profiles.fruit.profiles.apple.properties.ripe).toBe(true);
        });

        it("should set integer value in config", async () => {
            const config = await Config.load(MY_APP);
            config.set("profiles.fruit.profiles.apple.properties.price", "2");
            expect(config.properties.profiles.fruit.profiles.apple.properties.price).toBe(2);
        });

        it("should append to array value in config", async () => {
            const config = await Config.load(MY_APP);
            config.set("profiles.fruit.properties.tags", []);
            config.set("profiles.fruit.properties.tags", "sweet");
            expect(config.properties.profiles.fruit.properties.tags.length).toBe(1);
            expect(config.properties.profiles.fruit.properties.tags[0]).toBe("sweet");
        });

        it("should set secure string value in config", async () => {
            const config = await Config.load(MY_APP);
            const layer = (config as any).layerActive();
            config.set("profiles.fruit.profiles.apple.properties.secret", "@ppl3", { secure: true });
            expect(config.properties.profiles.fruit.profiles.apple.properties.secret).toBe("@ppl3");
            expect(layer.properties.secure.length).toBe(1);
            expect(layer.properties.secure[0]).toBe("profiles.fruit.profiles.apple.properties.secret");
        });

        it("should set schema URI at top of config", async () => {
            const config = await Config.load(MY_APP);
            const layer = (config as any).layerActive();
            config.setSchema("./schema.json");
            const jsonText = JSON.stringify(layer.properties);
            expect(jsonText.match(/^{\s*"\$schema":/)).not.toBeNull();
        });

        it("should save schema to disk if object is provided", async () => {
            const writeFileSpy = jest.spyOn(fs, "writeFileSync").mockReturnValue(undefined);
            const config = await Config.load(MY_APP);
            const schemaObj = { $schema: "./schema.json" };
            config.setSchema(schemaObj.$schema, schemaObj);
            expect(writeFileSpy).toHaveBeenCalledTimes(1);
            const jsonText = writeFileSpy.mock.calls[0][1];
            expect(jsonText).toBeDefined();
            expect(jsonText.match(/^{\s*"\$schema":/)).not.toBeNull();
        });

        it("should add new secure property to config", async () => {
            const config = await Config.load(MY_APP);
            const layer = (config as any).layerActive();
            const secureProp = "profiles.fruit.properties.secret";
            config.addSecure(secureProp);
            expect(layer.properties.secure.includes(secureProp)).toBe(true);
            config.addSecure(secureProp);
            expect(layer.properties.secure.filter((x: any) => x === secureProp).length).toBe(1);
        });
    });

    describe("secure", () => {
        it("should securely load all secure properties", async () => {
            throw new Error("TODO");
        });

        it("should securely save all secure properties", async () => {
            throw new Error("TODO");
        });
    });

    it("should find secure properties if any exist", () => {
        const config = new (Config as any)();
        config._layers = [
            {
                properties: { secure: [] }
            },
            {
                properties: { secure: [ "tokenValue" ] }
            },
            {
                properties: { secure: [] }
            }
        ];
        expect(config.secureFields()).toBe(true);
    });

    it("should not find secure properties if none exist", () => {
        const config = new (Config as any)();
        config._layers = [
            {
                properties: { secure: [] }
            }
        ];
        expect(config.secureFields()).toBe(false);
    });

    describe("api", () => {
        beforeEach(() => {
            jest.spyOn(Config, "search").mockReturnValue(__dirname + "/__resources__/project.config.user.json");
            jest.spyOn(fs, "existsSync").mockReturnValueOnce(true).mockReturnValue(false);
            jest.spyOn(Config.prototype as any, "secureLoad").mockResolvedValue(undefined);
        });
        describe("profiles", () => {
            describe("set", () => {
                it("should set a first level profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profilesApi = config.api.profiles;
                    const fakeProfile: IConfigProfile = {
                        type: "fruit",
                        profiles: {},
                        properties: {
                            color: "green"
                        }
                    };
                    profilesApi.set("grape", fakeProfile);
                    const profile = profilesApi.get("grape");
                    expect(profile).toMatchSnapshot();
                    expect(profile.color).toEqual("green");
                });
                it("should set a second level profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profilesApi = config.api.profiles;
                    const fakeProfile: IConfigProfile = {
                        type: "fruit",
                        profiles: {},
                        properties: {
                            color: "green"
                        }
                    };
                    profilesApi.set("fruit.grape", fakeProfile);
                    const profile = profilesApi.get("fruit");
                    const nestedProfile = profilesApi.get("fruit.grape");
                    expect(profile).toMatchSnapshot();
                    expect(nestedProfile).toMatchSnapshot();
                    expect(nestedProfile.color).toEqual("green");
                    expect(nestedProfile.origin).toEqual("California");
                });
                it("should set a second level profile to a first level profile that doesn't exist", async () => {
                    const config = await Config.load(MY_APP);
                    const profilesApi = config.api.profiles;
                    const fakeProfile: IConfigProfile = {
                        type: "vegetable",
                        profiles: {},
                        properties: {
                            color: "brown"
                        }
                    };
                    profilesApi.set("vegetables.potato", fakeProfile);
                    const profile = profilesApi.get("vegetables.potato");
                    const nestedProfile = profilesApi.get("vegetables.potato");
                    expect(profile).toMatchSnapshot();
                    expect(nestedProfile).toMatchSnapshot();
                    expect(nestedProfile.color).toEqual("brown");
                });
            });
            describe("get", () => {
                it("should get a first level profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profile = config.api.profiles.get("fruit");
                    expect(profile).toMatchSnapshot();
                    expect(profile.origin).toEqual("California");
                });
                it("should get a second level profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profile = config.api.profiles.get("fruit.apple");
                    expect(profile).toMatchSnapshot();
                    expect(profile.color).toEqual("red");
                    expect(profile.origin).toEqual("California");
                });
                it("should fail to get a profile that doesn't exist", async () => {
                    const config = await Config.load(MY_APP);
                    const profile = config.api.profiles.get("vegetable");
                    expect(profile).toEqual({});
                })
            });
            describe("exists", () => {
                it("should return first layer profile exists if it does", async () => {
                    const config = await Config.load(MY_APP);
                    const exists = config.api.profiles.exists("fruit");
                    expect(exists).toEqual(true);
                });
                it("should return second layer profile exists if it does", async () => {
                    const config = await Config.load(MY_APP);
                    const exists = config.api.profiles.exists("fruit.apple");
                    expect(exists).toEqual(true);
                });
                it("should return first layer profile does not exist", async () => {
                    const config = await Config.load(MY_APP);
                    const exists = config.api.profiles.exists("vegetable");
                    expect(exists).toEqual(false);
                });
                it("should return second layer profile does not exist", async () => {
                    const config = await Config.load(MY_APP);
                    const exists = config.api.profiles.exists("vegetable.potato");
                    expect(exists).toEqual(false);
                });
                it("should return second layer profile does not exist even if first layer does", async () => {
                    const config = await Config.load(MY_APP);
                    const exists = config.api.profiles.exists("fruit.mango");
                    expect(exists).toEqual(false);
                });
            });
            describe("defaultSet", () => {
                it("should set the default profile", async () => {
                    const config = await Config.load(MY_APP);
                    config.api.profiles.defaultSet("fruit", "fruit");
                    const defaultProfile = config.properties.defaults.fruit;
                    expect(defaultProfile).toEqual("fruit");
                });
                it("should set the default profile to one that does not exist", async () => {
                    const config = await Config.load(MY_APP);
                    config.api.profiles.defaultSet("fruit", "vegetable");
                    const defaultProfile = config.properties.defaults.fruit;
                    expect(defaultProfile).toEqual("vegetable");
                });
            });
            describe("defaultGet", () => {
                it("should get the default profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profile = config.api.profiles.defaultGet("fruit");
                    const profileExpected: any = {
                        origin: "California",
                        color: "red"
                    };
                    expect(profile).toMatchSnapshot();
                    expect(profile).toEqual(profileExpected);
                });
                it("should return null if there is no default profile", async () => {
                    const config = await Config.load(MY_APP);
                    const profile = config.api.profiles.defaultGet("vegetable");
                    expect(profile).toBeNull();
                });
            });
        });
        describe("plugins", () => {
            describe("get", () => {
                it("should get the plugins", async () => {
                    const config = await Config.load(MY_APP);
                    const plugins: string[] = config.api.plugins.get();
                    const expectedPlugins: string[] = ["@zowe/fruit-for-imperative"];
                    expect(plugins).toMatchSnapshot();
                    expect(plugins).toEqual(expectedPlugins);
                });
            });
        });
        describe("layers", () => {
        //     describe("write", () => {

        //     });
        //     describe("activate", () => {

        //     });
            describe("get", () => {
                it("should get the active layer", async () => {
                    const config = await Config.load(MY_APP);
                    const layer = config.api.layers.get();
                    expect(layer).toMatchSnapshot();
                    expect(layer.properties).toEqual(config.properties);
                });
            });
            describe("set", () => {
                it("should set the current layer", async () => {
                    const config = await Config.load(MY_APP);
                    const cnfg: IConfig = {
                        $schema: "fake",
                        defaults: {},
                        plugins: [],
                        secure: [],
                        profiles: {
                            vegetable: {
                                properties: {
                                    origin: "California",
                                    color: "brown"
                                }
                            }
                        }
                    };
                    config.api.layers.set(cnfg);
                    const retrievedConfig = config.api.layers.get().properties;
                    expect(retrievedConfig).toMatchSnapshot();
                    expect(retrievedConfig).toEqual(cnfg);
                });
            });
        });
    });
});
