// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config tests api layers get should get the active layer 1`] = `
Object {
  "exists": true,
  "global": false,
  "path": "/home/ah891585/GitHub/imperative/packages/config/__tests__/__resources__/project.config.user.json",
  "properties": Object {
    "defaults": Object {
      "fruit": "fruit.apple",
    },
    "plugins": Array [
      "@zowe/fruit-for-imperative",
    ],
    "profiles": Object {
      "fruit": Object {
        "profiles": Object {
          "apple": Object {
            "properties": Object {
              "color": "red",
            },
            "type": "fruit",
          },
          "orange": Object {
            "properties": Object {
              "color": "orange",
            },
            "type": "fruit",
          },
        },
        "properties": Object {
          "origin": "California",
        },
      },
    },
    "secure": Array [],
  },
  "user": true,
}
`;

exports[`Config tests api layers set should set the current layer 1`] = `
Object {
  "$schema": "fake",
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "vegetable": Object {
      "properties": Object {
        "color": "brown",
        "origin": "California",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests api plugins get should get the plugins 1`] = `
Array [
  "@zowe/fruit-for-imperative",
]
`;

exports[`Config tests api profiles defaultGet should get the default profile 1`] = `
Object {
  "color": "red",
  "origin": "California",
}
`;

exports[`Config tests api profiles get should get a first level profile 1`] = `
Object {
  "origin": "California",
}
`;

exports[`Config tests api profiles get should get a second level profile 1`] = `
Object {
  "color": "red",
  "origin": "California",
}
`;

exports[`Config tests api profiles set should set a first level profile 1`] = `
Object {
  "color": "green",
}
`;

exports[`Config tests api profiles set should set a second level profile 1`] = `
Object {
  "origin": "California",
}
`;

exports[`Config tests api profiles set should set a second level profile 2`] = `
Object {
  "color": "green",
  "origin": "California",
}
`;

exports[`Config tests api profiles set should set a second level profile to a first level profile that doesn't exist 1`] = `
Object {
  "color": "brown",
}
`;

exports[`Config tests api profiles set should set a second level profile to a first level profile that doesn't exist 2`] = `
Object {
  "color": "brown",
}
`;

exports[`Config tests load should load global config 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.banana",
    "vegetable": "vegetable.artichoke",
  },
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "green",
          },
          "type": "fruit",
        },
        "banana": Object {
          "properties": Object {
            "color": "yellow",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
          "type": "vegetable",
        },
      },
      "properties": Object {
        "origin": "China",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load project config 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.orange",
  },
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "green",
          },
          "type": "fruit",
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load project user config 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.apple",
  },
  "plugins": Array [
    "@zowe/fruit-for-imperative",
  ],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
          "type": "fruit",
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load user config 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.apple",
    "vegetable": "vegetable.artichoke",
  },
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
          "type": "fruit",
        },
        "banana": Object {
          "properties": Object {
            "color": "yellow",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
          "type": "vegetable",
        },
      },
      "properties": Object {
        "origin": "Mexico",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should merge multiple config files 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.apple",
    "vegetable": "vegetable.artichoke",
  },
  "plugins": Array [
    "@zowe/fruit-for-imperative",
  ],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
          "type": "fruit",
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
          "type": "vegetable",
        },
      },
      "properties": Object {
        "origin": "Mexico",
      },
    },
  },
  "secure": Array [],
}
`;
